--- a/public/index.html
+++ b/public/index.html
@@ -5,76 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadcheck by Vantage</title>
     <link rel="manifest" href="./manifest.json">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #000000;
-    }
-        #video {
-            width: 100%;
-            max-width: 400px;
-            border-radius: 10px;
-        }
-        #recordButton {
-            position: fixed;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            background-color: rgba(255, 255, 255, 0.863);
-            border: none;
-            outline: none;
-        }
-        #switchCameraButton {
-            position: fixed;
-            bottom: 40px;
-            left: calc(50% + 60px);
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: #69379773;
-            border: none;
-            outline: none;
-            color: white;
-            font-size: 24px;
-            cursor: pointer;
-        }
-
-        #switchCameraButton:hover {
-            background-color: white; 
-            color: black; 
-            border: 2px solid #4CAF50;
-        }
-        
-        .app-bar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 50px; /* Adjust this value as per your needs */
-            /*background-color: #470c53; /* Change this to your preferred color */
-            background: linear-gradient(to right, #1a003b, #2d102e); /* Change these colors to your preferred gradient */
-            color: #fff; /* Change this to your preferred color */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000; /* This will ensure the bar stays on top of other elements */
-            border-radius: 0 0 10px 10px;
-        }
-
-        .app-title {
-            margin: 0; /* Remove default margin */
-            font-size: 20px; /* Adjust this value as per your needs */
-            font-family: Arial, sans-serif; /* Change this to your preferred font */
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.8.1/firebase-app-compat.js"></script>
