--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,15 @@
     <button id="recordButton"></button>
     <button id="switchCameraButton">&#8635;</button>
 
+    <div id="damageAlert" style="display: none; position: fixed; width: 100%; height: 100%; top: 0; left: 0; background: rgb(179, 0, 0); z-index: 9999;">
+        <div style="position: relative; width: 100%; height: 100%;">
+            <div style="position: absolute; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 2em; z-index: 1;">
+                Damage Type: <span id="damageType">DA01</span>
+            </div>
+            <img id="damageImage" src="" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); max-width: 90%; max-height: 90%; z-index: 0;">
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
